# project_vecem

./: .gitignore  README.md  docker-compose.yml  example_usage.py  prompts.txt  sample_download.py  test.ipynb  vercel.json
.github/workflows/: azure-static-web-apps-purple-mushroom-039af8500.yml  backend_vecem.yml
Backend/: .env.template  .gitignore  Dockerfile  dev-requirements.txt  pyproject.toml  requirements.txt
Backend/app/: main.py  models.py
Backend/bot/: bot.ipynb  embeddings.ipynb  testing.ipynb  util.py
Backend/bot/Stored_vectors/chroma/: chroma.sqlite3
Backend/bot/Stored_vectors/faiss/: index.faiss  index.pkl
Backend/extra/: auth0.py
Backend/src/: bot.py  config.py  dal.py  main.py  profile.py  testing.ipynb
Backend/src/app/: main.py  models.py
Backend/src/config/: settings.py  test.py
Backend/src/database/: dal.py  mongodb.py  user_collections.py
Backend/src/middleware/: error_handler.py  security.py  server.py
Backend/src/models/: chat_models.py  dal.py  dataset_models.py  models.py  testing.ipynb  uploads.py  user.py
Backend/src/routes/: admin.py  auth.py  upload_router.py  users.py
Backend/src/schemas/: user_profile.py
Backend/src/test/: testing.ipynb
Backend/src/utils/: azure_storage.py  exception.py  file_handlers.py  logger.py
Backend/src/vecem/: main.py
Backend/src/vecem/config/: settings.py
Backend/src/vecem/database/: mongodb.py
Backend/src/vecem/models/: uploads.py
Backend/src/vecem/routes/: auth.py  upload_router.py  users.py
Backend/src/vecem/utils/: file_handlers.py
Backend/utils/: exception.py
Frontend/: .env.production  .env.template  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
Frontend/my-project/: index.html  package-lock.json  package.json
Frontend/my-project/src/: App.jsx  main.jsx
Frontend/src/: App.tsx  config.ts  index.css  main.tsx
Frontend/src/components/: AuthModal.tsx  AvatarSelector.tsx  CommunityLayout.tsx  DashboardLayout.tsx  DatasetGrid.tsx  DirectoryInput.tsx  Features.tsx  FloatingParticlesBackground.tsx  Footer.tsx  Hero.tsx  LoadingSpinner.tsx  Navbar.tsx  NavbarPro.tsx  NeuralNetwork.tsx  PrivateRoute.tsx  ProfileGuard.tsx  PromptCard.tsx  PromptsGrid.tsx
azurelibrary/: main.py  setup.py
azurelibrary/tests/: test_downloader.py
azurelibrary/vecem/: __init__.py
community/src/: App.tsx  UserProfile.tsx
profile/src/: App.tsx
vecem/: downloader.py
vecemlib/: README.md  __init__.py  downloader.py  setup.py
(+47 files in other folders)
