[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "src"  # Changed from "vecem" to match directory structure
version = "0.1.0"
description = "Project Vecem - A project for vector data open sourcing"
authors = [
    { name = "Rahul A Gowda", email = "rahulgowda277@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "pymongo",
    "motor",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "email-validator",
    "bson"
]

[project.urls]
Homepage = "https://github.com/rahulgowda277/project_vecem"
Repository = "https://github.com/rahulgowda277/project_vecem.git"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3